# losselot

./: .gitignore  APPROACH_B_NOTES.md  CLAUDE.md  CLAUDE_CODE_QUICKSTART.md  Cargo.toml  LOFI_DETECTION_RESEARCH.md  Makefile  README.md  diesel.toml
.claude/commands/: add-detection.md  analyze.md  build-test.md  decision.md  explain-scoring.md  gen-test-files.md  serve-ui.md
.github/workflows/: auto-release.yml  deploy-pages.yml  release.yml
docs/: DETECTION_IMPROVEMENT_PLAN.md  LOFI_DETECTION_NOTES.md  _config.yml  analyzer.html  audio-analysis.md  claude-tooling.md  decision-graph.md  git-history.json  index.html  index.md  package-lock.json  package.json  spelunk-story.html  spelunk.html  story.md  tsconfig.json  vitest.config.ts
docs/demo/: graph-data.json  index.html  losselot.db  visual-graph.html
docs/src/types/: analysis.ts  graph.ts  index.ts
docs/src/types/__tests__/: analysis.test.ts  graph.test.ts
examples/: generate_test_files.sh
migrations/00000000000001_initial_schema/: down.sql  up.sql
migrations/00000000000002_decision_graph/: down.sql  up.sql
migrations/00000000000003_command_log/: down.sql  up.sql
report-ui/: index.html  package-lock.json  package.json
report-ui/src/: App.css  App.tsx
report-ui/src/components/: BitrateTimeline.css  BitrateTimeline.tsx  FileDetail.css  FileDetail.tsx  FileList.css  FileList.tsx  Spectrogram.css  Spectrogram.tsx  StereoCorrelation.css  StereoCorrelation.tsx  SummaryCards.css  SummaryCards.tsx  index.ts
report-ui/src/hooks/: useAnalysisData.ts
report-ui/src/types/: analysis.ts
src/: db.rs  graph_ui.html  lib.rs  main.rs  schema.rs  serve.rs  ui.html
src/analyzer/: binary.rs  spectral.rs
src/mp3/: frame.rs  lame.rs
src/report/: html.rs  mod.rs
wasm-analyzer/: Cargo.toml
wasm-analyzer/src/: lib.rs
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/public/: graph-data.json
web/src/: App.tsx  index.css
web/src/components/: DetailPanel.tsx  Layout.tsx  NodeBadge.tsx  TypeFilters.tsx
web/src/hooks/: useChains.ts  useGraphData.ts
web/src/types/: graph.ts
web/src/utils/: colors.ts  graphProcessing.ts
web/src/views/: ChainsView.tsx  DagView.tsx  GraphView.tsx  TimelineView.tsx
