[package]
name = "losselot"
version = "0.3.0"
edition = "2021"
description = "Detect fake lossless audio files and re-encoding chains"
license = "MIT"
repository = "https://github.com/notactuallytreyanastasio/losselot"
homepage = "https://github.com/notactuallytreyanastasio/losselot"
readme = "README.md"
keywords = ["audio", "mp3", "flac", "spectral-analysis", "transcoding"]
categories = ["command-line-utilities", "multimedia::audio"]

[features]
default = ["gui"]
gui = ["dep:rfd"]

[dependencies]
# Audio decoding
symphonia = { version = "0.5", features = ["mp3"] }

# FFT for spectral analysis
rustfft = "6.2"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization for reports
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system traversal
walkdir = "2.4"

# Parallel processing
rayon = "1.8"

# Progress indication
indicatif = "0.17"

# GUI file dialog (optional - disabled for static Linux builds)
rfd = { version = "0.15", optional = true }

# Cross-platform file opening
open = "5.3"

# HTTP server for interactive mode
tiny_http = "0.12"
serde_urlencoded = "0.7"

# Date/time for report filenames
chrono = "0.4"

# SQLite ORM with migrations
diesel = { version = "2.2", features = ["sqlite", "r2d2", "64-column-tables"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
